--- a/nginx-proxy/docker-compose.yml
+++ b/nginx-proxy/docker-compose.yml
@@ -7,7 +7,7 @@
 version: '2'
 services:
   nginx:
-    image: jwilder/nginx-proxy:0.8.0
+    image: nginxproxy/nginx-proxy:1.3.1
     restart: unless-stopped
     volumes:
      - nginx-certs:/etc/nginx/certs
@@ -22,12 +22,13 @@ services:
      - ENABLE_IPV6=true
 
   letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion:2.0.2
+    image: nginxproxy/acme-companion:2.2.8
     restart: unless-stopped
     volumes_from:
      - nginx
     volumes:
      - /var/run/docker.sock:/var/run/docker.sock:ro
+     - letsencrypt-data:/etc/acme.sh
     environment:
      - DEFAULT_EMAIL=website@dewar.nl
 
@@ -35,6 +36,7 @@ volumes:
   nginx-certs:
   nginx-vhosts:
   nginx-html:
+  letsencrypt-data:
 
 networks:
   # Use a global network that can also be used by other containers that need
