--- a/ipv6nat/docker-compose.yml
+++ b/ipv6nat/docker-compose.yml
@@ -8,7 +8,7 @@
 version: '2'
 services:
   ipv6nat:
-    image: robbertkl/ipv6nat
+    image: robbertkl/ipv6nat:0.4.4
     restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
